# qec-threshold-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  run_simulation.py
examples/: basic_threshold.py
qec_threshold/: __init__.py
qec_threshold/analysis/: __init__.py  finite_size_scaling.py  threshold_estimator.py
qec_threshold/core/: __init__.py  pauli.py  surface_code.py
qec_threshold/decoders/: __init__.py  mwpm.py
qec_threshold/noise_models/: __init__.py  biased.py  correlated.py  depolarizing.py
qec_threshold/visualization/: __init__.py  advanced_plots.py  threshold_plots.py
tests/: __init__.py  test_core.py
